<resources>
    <string name="server">http://34.67.174.149</string>

    <string name="app_name">Infinite Stock</string>
    <string name="title_activity_login">Login Activity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="search_hint">Search</string>
    <string name="tab_text_1">Entry</string>
    <string name="tab_text_2">Exit</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="zero_number">0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Belum Memiliki Akun?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="masukkan_nama_produk">Masukkan nama produk</string>
    <string name="banyak_produk_ditambahkan">Banyak produk ditambahkan</string>
    <string name="satuan">Satuan</string>
    <string name="masukkan_angka">Masukkan angka</string>
    <string name="kg_ons_ml">kg, ons, ml,…</string>
    <string name="tambahkan">Tambahkan</string>
    <string name="transaksi_gudang">Transaksi Gudang</string>
    <string name="laporan_gudang">Laporan Gudang</string>


    <string-array name="metrics_array">
        <item>Kg</item>
        <item>Ons</item>
        <item>Gram</item>
        <item>Liter</item>
        <item>mL</item>
    </string-array>


    <!--Text In Activity Layout-->
    <string name="header_signin">Sign In</string>
    <string name="header_signup">Sign Up</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="asking_account">Don\'t Have Account?</string>
    <string name="header_main">Goods Stock</string>
    <string name="empty_goods">You haven\'t input any goods yet</string>
    <string name="header_add_goods">Add Goods</string>
    <string name="hint_goods_name">Goods Name</string>
    <string name="hint_goods_quantity">Quantity</string>
    <string name="hint_goods_unit">Unit</string>
    <string name="hint_goods_price">Goods Price</string>
    <string name="indonesian_valuta">Rp</string>
    <string name="hint_confirmation_password">Retype Password</string>
    <string name="header_update_goods">Update Goods</string>
    <string name="btn_increase">+</string>
    <string name="btn_decrease">-</string>
    <string name="btn_update">Update</string>
    <string name="btn_predict">Predict</string>
    <string name="notif_insufficient_predict">Insufficient stock to make prediction!</string>
    <string name="date_header_column">Date</string>
    <string name="prediction_header_column">Prediction</string>
    <string name="product_name">Infinite Stock</string>
    <string name="logout">Logout</string>
    <string name="tagline">a Bangkit Cahaya Asia\'s Capstone Project</string>
    <string name="loading">Loading</string>
    <string name="number" />
    <string name="empty_data">You haven\'t store any goods here</string>
    <string name="error">Oops, we have a trouble. We\'ll be back as soon as possible</string>
    <string name="refresh">Refresh</string>
    <string name="delete_good">Deleting</string>
    <string name="history">History</string>
    <string name="empty_exit_stock">No Exit Stock has been reported.</string>
    <string name="predict_message">Predicting...</string>
</resources>
