<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.stock.EntryInputFragment"
    android:padding="16dp">

    <TextView
        android:id="@+id/rv_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_produk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/field_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_name_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/masukkan_nama_produk" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/rv_qty_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/banyak_produk_ditambahkan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/field_qty"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_qty_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_qty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/masukkan_angka"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/rv_metric_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/satuan"
        app:layout_constraintStart_toEndOf="@+id/field_qty"
        app:layout_constraintTop_toTopOf="@+id/rv_qty_title" />

    <MultiAutoCompleteTextView
        android:id="@+id/input_metric"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/kg_ons_ml"
        app:layout_constraintBottom_toBottomOf="@+id/field_qty"
        app:layout_constraintStart_toEndOf="@+id/field_qty"
        app:layout_constraintTop_toBottomOf="@+id/rv_metric_title" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tambahkan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field_qty" />

</androidx.constraintlayout.widget.ConstraintLayout>