<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    >
    <ImageView
        android:id="@+id/logo_signin"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:scaleType="fitXY"
        tools:ignore="ContentDescription" />
    <TextView
        android:id="@+id/header_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_signin"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/logo_signin"
        android:layout_marginTop="40dp"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/value_signin_email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/header_signin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_background"
        android:hint="@string/hint_email"
        android:textSize="18sp"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        tools:ignore="Autofill" />
    <EditText
        android:id="@+id/value_signin_pass"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/value_signin_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_background"
        android:hint="@string/hint_password"
        android:textSize="18sp"
        android:inputType="textPassword"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        tools:ignore="Autofill" />
    <ImageButton
        android:id="@+id/btn_signin"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@+id/value_signin_pass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_btn"
        android:src="@drawable/ic_check"
        tools:ignore="ContentDescription" />
    <TextView
        android:id="@+id/text_to_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/asking_account"
        android:layout_below="@id/btn_signin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textStyle="bold"/>
</RelativeLayout>