<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    >
    <include
        android:id="@+id/appbar_add_goods"
        layout="@layout/custom_appbar"/>
    <TextView
        android:id="@+id/header_add_goods"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_add_goods"
        android:layout_below="@+id/appbar_add_goods"
        android:layout_marginStart="27dp"
        android:layout_marginTop="40dp"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/value_goods_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/header_add_goods"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="27dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/input_background"
        android:hint="@string/hint_goods_name"
        android:textSize="25sp"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        tools:ignore="Autofill" />
    <RelativeLayout
        android:id="@+id/container_qty_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/value_goods_name"
        >
        <EditText
            android:id="@+id/value_goods_quantity"
            android:layout_width="190dp"
            android:layout_height="60dp"
            android:layout_marginStart="27dp"
            android:layout_marginEnd="27dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_background"
            android:hint="@string/hint_goods_quantity"
            android:textSize="25sp"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            tools:ignore="Autofill"/>
        <EditText
            android:id="@+id/value_goods_unit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="0dp"
            android:layout_toEndOf="@+id/value_goods_quantity"
            android:layout_marginEnd="27dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_background"
            android:hint="@string/hint_goods_unit"
            android:textSize="25sp"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            tools:ignore="Autofill"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/container_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/container_qty_unit"
        >
        <EditText
            android:id="@+id/indonesian_valuta"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_marginStart="27dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/left_special_box"
            android:hint="@string/indonesian_valuta"
            android:textSize="25sp"
            android:textStyle="bold"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:enabled="false"
            tools:ignore="Autofill"/>
        <EditText
            android:id="@+id/value_goods_price"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_toEndOf="@+id/indonesian_valuta"
            android:layout_marginEnd="27dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/right_special_box"
            android:hint="@string/hint_goods_price"
            android:textSize="25sp"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            tools:ignore="Autofill"/>
    </RelativeLayout>
    <ImageButton
        android:id="@+id/btn_signin"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@+id/container_price"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_btn"
        android:src="@drawable/ic_check"
        tools:ignore="ContentDescription" />

<!--    <EditText-->
<!--        android:id="@+id/value_goods_price"-->
<!--        android:layout_width="350dp"-->
<!--        android:layout_height="60dp"-->
<!--        android:layout_marginStart="27dp"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:background="@drawable/input_background"-->
<!--        android:layout_below="@+id/qty_unit"-->
<!--        android:hint="@string/hint_goods_price"-->
<!--        android:textSize="25sp"-->
<!--        android:inputType="textEmailAddress"-->
<!--        android:paddingHorizontal="20dp"-->
<!--        android:paddingVertical="10dp"-->
<!--        tools:ignore="Autofill"/>-->

</RelativeLayout>